k8s/development-remote/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: dev-geovany-welch-chouette-frontend
