k8s/development-remote/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dev-geovany-welch-chouette-frontend-deployment
  namespace: dev-geovany-welch-chouette-frontend
  labels:
    app: dev-geovany-welch-chouette-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dev-geovany-welch-chouette-frontend
  template:
    metadata:
      labels:
        app: dev-geovany-welch-chouette-frontend
    spec:
      containers:
        - name: dev-geovany-welch-chouette-frontend
          image: corentin35/geovany-welch-chouette-frontend:develop-${TAG_VERSION}
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
          resources:
            requests:
              cpu: '400m'
              memory: '512Mi'
            limits:
              cpu: '800m'
              memory: '1Gi'
      imagePullSecrets:
        - name: regcred
